refactor: extract NeonmarkerColorService
Move tag-rule logic into NeonmarkerColorService with panel and
extension delegation, unit tests, addHighlighter fix, look and feel
refresh, and tag combobox refresh fixes. No user-visible feature
changes beyond maintenance.

Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>